order section add

--- a/index.html
+++ b/index.html
@@ -567,10 +567,57 @@
         </div>
 
       </section>
-
-
-
    <!--  reveiw section ends -->
+
+   <!-- order section starts -->
+    <section class="order" id="order">
+      <h3 class="sub-heading">order now</h3>
+      <h1 class="heading">free and fast</h1>
+<form action="">
+<div class="input-box">
+  <div class="input">
+    <span>your name</span>
+    <input type="text" placeholder="enter your name">
+  </div>
+  <div class="input">
+    <span>your number</span>
+    <input type="number" placeholder="enter your number">
+  </div>
+</div>
+<div class="input-box">
+  <div class="input">
+    <span>your order</span>
+    <input type="text" placeholder="enter food name">
+  </div>
+  <div class="input">
+    <span>additional food</span>
+    <input type="test" placeholder="extra with food">
+  </div>
+</div>
+<div class="input-box">
+  <div class="input">
+    <span>how much</span>
+    <input type="number" placeholder="how many order">
+  </div>
+  <div class="input">
+    <span>date and time</span>
+    <input type="datetime-local" >
+  </div>
+</div>
+<div class="input-box">
+  <div class="input">
+    <span>your address</span>
+  <textarea name="" id="" placeholder="enter your address"></textarea>
+  </div>
+  <div class="input">
+    <span>your message</span>
+    <textarea name="" id="" placeholder="enter your message"></textarea>
+  </div>
+</div>
+<input type="submit" value="order now" class="btn">
+</form>
+    </section>
+   <!-- order section ends -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="app.js"></script>
