--- a/index.html
+++ b/index.html
@@ -619,6 +619,51 @@
     </section>
    <!-- order section ends -->
 
+   <!-- footer section starts -->
+    <section class="footer">
+
+      <div class="box-container">
+
+          <div class="box">
+               <h3>locations</h3>
+               <a href="#">pakistan</a>
+               <a href="#">japan</a>
+               <a href="#">india</a>
+               <a href="#">russia</a>
+               <a href="#">france</a>
+          </div>
+
+          <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">dishes</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">review</a>
+            <a href="#">order</a>
+       </div>
+
+       <div class="box">
+        <h3>contacts info</h3>
+        <a href="#">+123-456-7893</a>
+        <a href="#">+123-980-2354</a>
+        <a href="#">imamatari@gmail.com</a>
+        <a href="#">laibakhan@gmail.com</a>
+        <a href="#">karachi, pakistan -7680940</a>
+   </div>
+   <div class="box">
+    <h3>folow us</h3>
+    <a href="#">facebook</a> 
+    <a href="#">linkedin</a> 
+    <a href="#">intragram</a> 
+    <a href="#">twitter</a> 
+</div>
+
+      </div>
+       <div class="credit">copyright @ 2024 by <span>imam</span>  </div>
+    </section>
+   <!-- footer section ends -->
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="app.js"></script>
   </body>
